# django-models

./: pyproject.toml
DjangoModels/: asgi.py  settings.py  urls.py  wsgi.py
blog/: admin.py  models.py
blog/migrations/: 0001_initial.py  0002_rename_url_cover_name.py
