[tool.poetry]
name = "django-models"
version = "0.1.0"
description = ""
authors = ["kyo <odinxp@gmail.com>"]
readme = "README.md"
packages = [{include = "django_models"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
